--- a/src/app/WatchWare/System/Notification/create-condition/create-condition.component.html
+++ b/src/app/WatchWare/System/Notification/create-condition/create-condition.component.html
@@ -64,7 +64,7 @@
                     </div>
 
                     <div>
-                        <label for="threshold" class="font-medium text-gray-700">Threshold</label>
+                        <label for="threshold" class="font-medium text-gray-700">Threshold (minutes / value)</label>
                         <input id="threshold" type="number" formControlName="Threshold"
                             class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500"
                             required min="-1000000" step="any">
