--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,10 @@
     'pl-72': (!isLoginPage && !isLicensePage) && !isCollapsed && screenIsLarge
   }">
 
-
+      <button *ngIf="!isDashboard" type="button" (click)="goBack()"
+        class="px-4 py-1 mb-4 border border-accent bg-primary text-accent rounded-md hover:bg-accent hover:text-primary transition">
+        <i class="fa fa-arrow-left"></i> Back
+      </button>
       <router-outlet></router-outlet>
     </div>
 
