--- a/src/app/WatchWare/System/Notification/channel-statuses/statuses.component.html
+++ b/src/app/WatchWare/System/Notification/channel-statuses/statuses.component.html
@@ -1,5 +1,7 @@
-<div class="">
+<div class="flex justify-between items-center">
     <h2 class="text-2xl font-normal text-gray-500">Notifications - Channels Status</h2>
+    <button (click)="showPreferenceDialog=true" class="px-4 py-1  bg-accent text-white  flex justify-center items-center gap-2
+    rounded-md hover:bg-secondary transition duration-300"><i class="fa-solid fa-gear"></i>Preference</button>
 </div>
 <div class="my-5 border rounded-lg shadow-md p-4 bg-white">
     <p-table #dt [value]="Channels" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]" [loading]="Loading"
@@ -65,3 +67,30 @@
         </ng-template>
     </p-table>
 </div>
+
+<p-dialog [(visible)]="showPreferenceDialog" header="Notification Preference" [modal]="true" [closable]="true"
+    [style]="{width: '30vw'}">
+    <form [formGroup]="preferenceForm" (ngSubmit)="savePreference()" class="space-y-4">
+
+        <div *ngFor="let option of notificationOptions" class="flex items-center gap-2">
+            <p-radioButton name="preference" [value]="option.value" formControlName="preference"
+                inputId="{{option.label}}">
+            </p-radioButton>
+            <label [for]="option.label" class="text-sm text-gray-700 cursor-pointer">{{ option.label }}</label>
+        </div>
+
+        <div class="flex justify-end gap-2 pt-4">
+            <button type="button" (click)="showPreferenceDialog = false"
+                class="px-4 py-2 text-sm bg-gray-100 text-gray-700 rounded hover:bg-gray-200">
+                Cancel
+            </button>
+            <button type="submit" [disabled]="UpdatePreferenceLoading"
+                class="px-4 py-2 text-sm bg-accent text-primary border border-accent rounded hover:bg-opacity-80 transition flex items-center gap-2">
+
+                <i *ngIf="UpdatePreferenceLoading" class="fas fa-spinner fa-spin"></i>
+                {{ UpdatePreferenceLoading ? 'Saving...' : 'Save' }}
+            </button>
+
+        </div>
+    </form>
+</p-dialog>
