--- a/src/app/WatchWare/System/Notification/channel-statuses/statuses.component.html
+++ b/src/app/WatchWare/System/Notification/channel-statuses/statuses.component.html
@@ -1,21 +1,39 @@
 <div class="flex justify-between items-center">
     <h2 class="text-2xl font-normal text-gray-500">Notifications - Channels Status</h2>
-    <button (click)="showPreferenceDialog=true" class="px-4 py-1  bg-accent text-white  flex justify-center items-center gap-2
-    rounded-md hover:bg-secondary transition duration-300"><i class="fa-solid fa-gear"></i>Preference</button>
+    <div class="flex">
+        <button (click)="showPreferenceDialog=true" class=" px-4 py-1  bg-accent text-white  flex justify-center items-center gap-2
+        rounded-md hover:bg-secondary transition duration-300"><i class="fa-solid fa-gear"></i>Preference</button>
+        <button (click)="onCreateCondition()" class="ml-2 px-4 py-1  bg-accent text-white  flex justify-center items-center gap-2
+        rounded-md hover:bg-secondary transition duration-300"><i class="fa-solid fa-code-branch"></i>Create
+            Condition</button>
+    </div>
+
 </div>
 <div class="my-5 border rounded-lg shadow-md p-4 bg-white">
-    <p-table #dt [value]="Channels" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]" [loading]="Loading"
-        showGridlines="" [paginator]="true" [globalFilterFields]="['ChannelName','StationName','Units']"
-        [tableStyle]="{ 'min-width': '1000px' }">
+    <p-table #dt [value]="Channels" dataKey="ChannelId" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]" 
+        [loading]="Loading" [(selection)]="SelectedChannels" showGridlines="" [paginator]="true"
+        [globalFilterFields]="['ChannelName','StationName','Units']" [tableStyle]="{ 'min-width': '1000px' }">
         <ng-template #caption>
             <div class="flex">
 
-                <p-iconfield iconPosition="left" class="mr-auto">
+
+                <p-iconfield iconPosition="left" class="mr-4">
                     <p-inputicon>
                         <i class="fa fa-search"></i>
                     </p-inputicon>
                     <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Search keyword" />
                 </p-iconfield>
+                <button type="button" (click)="onMultiSubscribe()" [disabled]="MultiSubscribeLoading"
+                    class="flex items-center gap-2 px-4 mr-auto bg-accent border border-accent text-primary rounded-md hover:bg-secondary hover:border-secondary hover:text-primary transition">
+
+                    <i *ngIf="MultiSubscribeLoading; else iconCheck" class="fas fa-spinner fa-spin"></i>
+                    <ng-template #iconCheck>
+                        <i class="fas fa-check"></i>
+                    </ng-template>
+
+                    {{ MultiSubscribeLoading ? 'Subscribing...' : 'Subscribe Selected Channels' }}
+                </button>
+
                 <button type="button" (click)="onManageContacts()"
                     class="flex items-center gap-2 px-4 ml-auto bg-accent border border-accent text-primary rounded-md hover:bg-secondary hover:border-secondary hover:text-primary transition">
                     <i class="fas fa-address-book"></i>
@@ -27,6 +45,9 @@
         </ng-template>
         <ng-template #header>
             <tr>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:1%">
+                    <p-tableHeaderCheckbox />
+                </th>
                 <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:10%">Channel
                     Name
                 </th>
@@ -41,6 +62,9 @@
         </ng-template>
         <ng-template #body let-channel>
             <tr>
+                <td>
+                    <p-tableCheckbox [value]="channel" />
+                </td>
                 <td>{{ channel.ChannelName }}</td>
                 <td>{{ channel.StationName }}</td>
                 <td>{{ channel.Units }}</td>
