--- a/src/app/Navigation/sidebar/sidebar.component.html
+++ b/src/app/Navigation/sidebar/sidebar.component.html
@@ -61,7 +61,11 @@
 
             </div>
         </div>
-
+        <button
+            class="w-10 h-10 flex items-center justify-center rounded-full  hover:bg-primary hover:text-accent transition-colors duration-300 ease-in-out hover:cursor-pointer"
+            (click)="showNotifications = !showNotifications">
+            <i class="fas fa-bell"></i>
+        </button>
         <button
             class="bg-primary text-accent px-4 py-2 rounded-md font-semibold text-sm flex items-center space-x-2 hover:bg-secondary hover:text-primary transition-colors duration-300 ease-in-out"
             (click)="onLogout()">
@@ -164,3 +168,9 @@
     </div> -->
 
 </div>
+
+
+<p-drawer header="Notifications" [(visible)]="showNotifications" position="right"
+    styleClass="!w-full md:!w-100 lg:!w-[40rem]">
+    <app-notifications></app-notifications>
+</p-drawer>
