increases build size limit and remove absolute path to relative path added basehref in production added commonjsdeps in angular.json renamed bgimage to getrid of spaces

--- a/src/app/WatchWare/Auth/login/login.component.html
+++ b/src/app/WatchWare/Auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-center items-center min-h-screen"
-    style="background: url('/assets/logo/login background.jpg') no-repeat center center / cover;">
+    style="background: url('assets/logo/login-background.jpg') no-repeat center center / cover;">
 
     <div class="fixed top-0 left-0 px-6 py-4 text-primary font-bold text-2xl ">
         <div class="flex items-start">
