--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import 'ngx-toastr/toastr';
+@import url('assets/fonts/inter-fonts/inter.css');
 
 @tailwind base;
 @tailwind components;
@@ -14,35 +15,6 @@
     --color-accent: #1478B4;
 }
 
-@font-face {
-    font-family: 'Inter';
-    src: url('assets/fonts/inter/Inter-Regular-400.otf') format('opentype');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Inter';
-    src: url('assets/fonts/inter/Inter-Italic-400.otf') format('opentype');
-    font-weight: 400;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Inter';
-    src: url('assets/fonts/inter/Inter-Bold-700.otf') format('opentype');
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Inter';
-    src: url('assets/fonts/inter/Inter-Bold-Italic-700.otf') format('opentype');
-    font-weight: 700;
-    font-style: italic;
-}
-
-/* Apply globally */
 body {
     font-family: 'Inter', sans-serif;
 }
