--- a/src/app/WatchWare/System/Notification/create-subscription/create-subscription.component.html
+++ b/src/app/WatchWare/System/Notification/create-subscription/create-subscription.component.html
@@ -78,13 +78,13 @@
                 <!-- <td>
                     <div class="flex gap-2">
 
-                        <button type="button" (click)="onEdit(channel)"
+                        <button type="button" (click)="onEdit(condition)"
                             class="px-2 text-green-500 border border-green-500 rounded-md hover:bg-green-500 hover:text-white transition">
                             <i class="fa fa-pencil-alt"></i>
                         </button>
 
 
-                        <button type="button" (click)="onDelete(channel)"
+                        <button type="button" (click)="onDelete(condition)"
                             class="px-2 text-red-500 border border-red-500 rounded-md hover:bg-red-500 hover:text-white transition">
                             <i class="fa fa-trash"></i>
                         </button>
