--- a/src/app/WatchWare/System/Notification/edit-subscription/edit-subscription.component.html
+++ b/src/app/WatchWare/System/Notification/edit-subscription/edit-subscription.component.html
@@ -36,10 +36,10 @@
                     class=" px-4 bg-red-500 border border-red-500 text-primary rounded-md hover:bg-red-700 border-none hover:text-primary transition">
 
                     <span *ngIf="UnsubscribeLoading">
-                        <i class="fas fa-spinner fa-spin mr-2"></i>Unsubscribe
+                        <i class="fas fa-spinner fa-spin mr-2"></i>Delete Subscription
                     </span>
                     <span *ngIf="!UnsubscribeLoading">
-                        <i class="fa fa-trash mr-2"></i> Unsubscribe
+                        <i class="fa fa-trash mr-2"></i> Delete Subscription
                     </span>
                 </button>
 
@@ -71,6 +71,8 @@
                 </th>
                 <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">Duration
                 </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">Action
+                </th>
             </tr>
         </ng-template>
         <ng-template #body let-condition let-i="rowIndex">
@@ -87,21 +89,21 @@
                         Minutes</span> </td>
                 <td>{{ condition.Cooldown }} Minutes</td>
                 <td>{{ condition.Duration }} Minutes</td>
-                <!-- <td>
+                <td>
                     <div class="flex gap-2">
 
-                        <button type="button" (click)="onEdit(channel)"
+                        <button type="button" (click)="onEdit(condition)"
                             class="px-2 text-green-500 border border-green-500 rounded-md hover:bg-green-500 hover:text-white transition">
                             <i class="fa fa-pencil-alt"></i>
                         </button>
 
 
-                        <button type="button" (click)="onDelete(channel)"
+                        <button type="button" (click)="onDelete(condition)"
                             class="px-2 text-red-500 border border-red-500 rounded-md hover:bg-red-500 hover:text-white transition">
                             <i class="fa fa-trash"></i>
                         </button>
                     </div>
-                </td> -->
+                </td>
 
             </tr>
         </ng-template>
@@ -125,7 +127,7 @@
             <div class="flex items-center gap-2 mt-6">
                 <button
                     [ngClass]="'mt-1 px-4 py-2 bg-red-500 text-white rounded-md hover:bg-red-700 transition disabled:bg-gray-500 disabled:cursor-not-allowed'"
-                    (click)="onAccept()" class="w-32">Unsubscribe</button>
+                    (click)="onAccept()" class="w-32">Delete</button>
                 <button
                     [ngClass]="'mt-1 px-4 py-2 bg-green-500 text-white rounded-md hover:bg-green-700 transition disabled:bg-gray-500 disabled:cursor-not-allowed'"
                     (click)="onReject()" class="w-32">Cancel</button>
