added channel config creation for station

--- a/src/app/WatchWare/PCB/CPCBNKSS/stations-status/stations-status.component.html
+++ b/src/app/WatchWare/PCB/CPCBNKSS/stations-status/stations-status.component.html
@@ -60,6 +60,10 @@
                             class="px-2 text-red-500 border border-red-500 rounded-md hover:bg-red-500 hover:text-white transition">
                             <i class="fa fa-trash"></i>
                         </button>
+                        <button type="button" (click)="onChannels(config)"
+                            class="px-2  text-blue-500 border border-blue-500 rounded-md hover:bg-blue-500 hover:text-white transition">
+                            Channels Configuration
+                        </button>
                     </div>
                 </td>
 
