--- a/src/app/WatchWare/PCB/CPCBNKSS/channels-status/channels-status.component.html
+++ b/src/app/WatchWare/PCB/CPCBNKSS/channels-status/channels-status.component.html
@@ -1,1 +1,74 @@
-<p>channels-status works!</p>
+<div class="">
+    <h2 class="text-2xl font-normal text-gray-500">CPCB Channels Configuration of {{station.Name}}</h2>
+</div>
+<div class="my-5 border rounded-lg shadow-md p-4 bg-white">
+    <p-table #dt [value]="ChannelConfigurations" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]"
+        [loading]="ChannelConfigurationsLoading" showGridlines="" [paginator]="true"
+        [globalFilterFields]="['StationName', 'CPCB_StationId','CPCB_UserName','CPCB_Password']"
+        [tableStyle]="{ 'min-width': '1000px' }">
+        <ng-template #caption>
+            <div class="flex">
+                <button type="button" (click)="onCreate()"
+                    class=" px-4 bg-accent border border-accent text-primary rounded-md hover:bg-accent hover:text-primary transition">
+                    <i class="fa fa-plus"></i>
+                    Create
+                </button>
+                <p-iconfield iconPosition="left" class="ml-auto">
+                    <p-inputicon>
+                        <i class="fa fa-search"></i>
+                    </p-inputicon>
+                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Search keyword" />
+                </p-iconfield>
+            </div>
+        </ng-template>
+        <ng-template #header>
+            <tr>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">
+                    Channel
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">CPCB
+                    ChannelId
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">CPCB
+                    ChannelName
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">CPCB Units
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:1%">Action
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template #body let-config>
+            <tr>
+                <td>{{config.ChannelName}}</td>
+                <td>{{config.CPCB_ChannelId}}</td>
+                <td>{{config.CPCB_ChannelName}}</td>
+                <td>{{config.CPCB_Units}}</td>
+
+
+
+                <td>
+                    <div class="flex gap-2">
+
+                        <button type="button" (click)="onEdit(config)"
+                            class="px-2 text-green-500 border border-green-500 rounded-md hover:bg-green-500 hover:text-white transition">
+                            <i class="fa fa-pencil-alt"></i>
+                        </button>
+
+
+                        <button type="button" (click)="onDelete(config)"
+                            class="px-2 text-red-500 border border-red-500 rounded-md hover:bg-red-500 hover:text-white transition">
+                            <i class="fa fa-trash"></i>
+                        </button>
+                    </div>
+                </td>
+
+            </tr>
+        </ng-template>
+        <ng-template #emptymessage>
+            <tr>
+                <td colspan="7">No Channel Configurations found for this station.</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
