--- a/src/app/WatchWare/PCB/CPCBNKSS/edit-channel-config/edit-channel-config.component.html
+++ b/src/app/WatchWare/PCB/CPCBNKSS/edit-channel-config/edit-channel-config.component.html
@@ -1,5 +1,5 @@
 <div class="my-5 border bg-white shadow-lg rounded-lg p-6">
-    <h2 class="text-xl font-bold text-gray-900 mb-4">Create CPCB Channel Configuration</h2>
+    <h2 class="text-xl font-bold text-gray-900 mb-4">Edit CPCB Channel Configuration</h2>
     <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
         <!-- Sidebar Description -->
         <div class="lg:col-span-3">
@@ -68,7 +68,7 @@
 
                         </span>
 
-                        <span>Create</span>
+                        <span>Update</span>
                     </button>
                     <button type="button" (click)="goBack()"
                         class="mt-1 px-4 py-2 bg-gray-500 text-white rounded-md hover:bg-gray-600">
