--- a/src/app/WatchWare/PCB/CPCBNKSS/edit-station-config/edit-station-config.component.html
+++ b/src/app/WatchWare/PCB/CPCBNKSS/edit-station-config/edit-station-config.component.html
@@ -1,57 +1,56 @@
 <div class="my-5 border bg-white shadow-lg rounded-lg p-6">
-    <h2 class="text-xl font-bold text-gray-900 mb-4">Create CPCB Channel Configuration</h2>
+    <h2 class="text-xl font-bold text-gray-900 mb-4">Edit CPCB Station Configuration</h2>
     <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
         <!-- Sidebar Description -->
         <div class="lg:col-span-3">
             <!-- <h3 class="text-gray-900 font-medium text-lg">Basic Info</h3> -->
-            <p class="text-gray-600 text-sm">Provide essential details about the cpcb channel configuration.</p>
+            <p class="text-gray-600 text-sm">Provide essential details about the cpcb station configuration.</p>
         </div>
 
         <!-- Form Section -->
         <div class="lg:col-span-9">
-            <form [formGroup]="ChannelConfigForm" (ngSubmit)="onSubmit()" class="space-y-4">
+            <form [formGroup]="StationConfigForm" (ngSubmit)="onSubmit()" class="space-y-4">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div>
-                        <label for="ChannelId" class="block text-gray-700 font-medium">Channel</label>
-                        <select id="ChannelId" formControlName="ChannelId"
+                        <label for="StationId" class="block text-gray-700 font-medium">Station</label>
+                        <select id="StationId" formControlName="StationId"
                             class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
-                            <option *ngFor="let station of Channels" [value]="station.Id">{{ station.Name }}
+                            <option *ngFor="let station of Stations" [value]="station.Id">{{ station.Name }}
                             </option>
                         </select>
                         <small
-                            *ngIf="ChannelConfigForm.get('ChannelId')?.invalid && ChannelConfigForm.get('ChannelId')?.touched"
-                            class="text-red-500 text-sm">Channel is required</small>
+                            *ngIf="StationConfigForm.get('StationId')?.invalid && StationConfigForm.get('StationId')?.touched"
+                            class="text-red-500 text-sm">Station is required</small>
                     </div>
                     <div>
-                        <label for="CPCB_ChannelId" class="font-medium text-gray-700 text-900">CPCB ChannelId</label>
-                        <input id="CPCB_ChannelId" type="number" formControlName="CPCB_ChannelId"
+                        <label for="CPCB_StationId" class="font-medium text-gray-700 text-900">CPCB StationId</label>
+                        <input id="CPCB_StationId" type="text" formControlName="CPCB_StationId"
                             class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
                         <small
-                            *ngIf="ChannelConfigForm.get('CPCB_ChannelId')?.invalid && ChannelConfigForm.get('CPCB_ChannelId')?.touched"
+                            *ngIf="StationConfigForm.get('CPCB_StationId')?.invalid && StationConfigForm.get('CPCB_StationId')?.touched"
                             class="text-red-500 text-sm">
-                            CPCB ChannelId is required.
+                            CPCB StationId is required.
                         </small>
                     </div>
 
                     <div>
-                        <label for="CPCB_ChannelName" class="font-medium text-gray-700 text-900">CPCB
-                            ChannelName</label>
-                        <input id="CPCB_ChannelName" type="text" formControlName="CPCB_ChannelName"
+                        <label for="CPCB_UserName" class="font-medium text-gray-700 text-900">CPCB UserName</label>
+                        <input id="CPCB_UserName" type="text" formControlName="CPCB_UserName"
                             class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
                         <small
-                            *ngIf="ChannelConfigForm.get('CPCB_ChannelName')?.invalid && ChannelConfigForm.get('CPCB_ChannelName')?.touched"
+                            *ngIf="StationConfigForm.get('CPCB_UserName')?.invalid && StationConfigForm.get('CPCB_UserName')?.touched"
                             class="text-red-500 text-sm">
-                            CPCB ChannelName is required.
+                            CPCB UserName is required.
                         </small>
                     </div>
                     <div>
-                        <label for="CPCB_Units" class="font-medium text-gray-700 text-900">CPCB Units</label>
-                        <input id="CPCB_Units" type="text" formControlName="CPCB_Units"
+                        <label for="CPCB_Password" class="font-medium text-gray-700 text-900">CPCB Password</label>
+                        <input id="CPCB_Password" type="text" formControlName="CPCB_Password"
                             class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
                         <small
-                            *ngIf="ChannelConfigForm.get('CPCB_Units')?.invalid && ChannelConfigForm.get('CPCB_Units')?.touched"
+                            *ngIf="StationConfigForm.get('CPCB_Password')?.invalid && StationConfigForm.get('CPCB_Password')?.touched"
                             class="text-red-500 text-sm">
-                            CPCB Units is required.
+                            CPCB Password is required.
                         </small>
                     </div>
                 </div>
@@ -68,7 +67,7 @@
 
                         </span>
 
-                        <span>Create</span>
+                        <span>Update</span>
                     </button>
                     <button type="button" (click)="goBack()"
                         class="mt-1 px-4 py-2 bg-gray-500 text-white rounded-md hover:bg-gray-600">
