added dialog to update uploadsettings

--- a/src/app/WatchWare/Auth/profile/profile.component.html
+++ b/src/app/WatchWare/Auth/profile/profile.component.html
@@ -70,22 +70,22 @@
                 <div class="flex items-center space-x-10">
                     <div class="text-right">
                         <h2 class="font-normal text-black">{{user.Email}}</h2>
-                        <div *ngIf="user.IsEmailVerified">
+                        <!-- <div *ngIf="user.IsEmailVerified">
 
                             <h2 class="text-sm mt-1 text-green-600">Verified</h2>
                         </div>
                         <div *ngIf="!user.IsEmailVerified">
 
                             <h2 class="text-sm mt-1 text-red-600">Unverified</h2>
-                        </div>
+                        </div> -->
                     </div>
 
 
-                    <button
+                    <!-- <button
                         class="border-gray-300 border rounded-3xl text-sm px-4 py-2 text-gray-600 hover:bg-accent hover:text-primary hover:border-accent transition-colors">
                         Edit
                         <i class="fa fa-pencil text-sm pl-1"></i>
-                    </button>
+                    </button> -->
                 </div>
             </div>
             <hr class="my-4" />
@@ -99,22 +99,22 @@
                 <div class="flex items-center space-x-10">
                     <div class="text-right">
                         <h2 class="font-normal text-black">{{user.PhoneNumber}}</h2>
-                        <div *ngIf="user.IsPhoneVerified">
+                        <!-- <div *ngIf="user.IsPhoneVerified">
 
                             <h2 class="text-sm mt-1 text-green-600">Verified</h2>
                         </div>
                         <div *ngIf="!user.IsPhoneVerified">
 
                             <h2 class="text-sm mt-1 text-red-600">Unverified</h2>
-                        </div>
+                        </div> -->
                     </div>
 
 
-                    <button
+                    <!-- <button
                         class="border-gray-300 border rounded-3xl text-sm px-4 py-2 text-gray-600 hover:bg-accent hover:text-primary hover:border-accent transition-colors">
                         Edit
                         <i class="fa fa-pencil text-sm pl-1"></i>
-                    </button>
+                    </button> -->
                 </div>
             </div>
             <hr class="my-4" />
@@ -132,7 +132,7 @@
 
                 </div>
             </div>
-            <hr class="my-4" />
+            <!-- <hr class="my-4" />
             <div class="flex justify-between items-center">
                 <div>
 
@@ -147,7 +147,7 @@
                     </button>
 
                 </div>
-            </div>
+            </div> -->
         </ng-container>
     </div>
 </div>
