--- a/src/app/WatchWare/PCB/CPCBNKSS/channels-status/channels-status.component.html
+++ b/src/app/WatchWare/PCB/CPCBNKSS/channels-status/channels-status.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div *ngIf="station" class="">
     <h2 class="text-2xl font-normal text-gray-500">CPCB Channels Configuration of {{station.Name}}</h2>
 </div>
 <div class="my-5 border rounded-lg shadow-md p-4 bg-white">
