--- a/src/app/WatchWare/Reports/Result/exceedance/exceedance.component.html
+++ b/src/app/WatchWare/Reports/Result/exceedance/exceedance.component.html
@@ -18,7 +18,8 @@
         </div>
     </div>
 
-    <div class="w-[1570px]">
+    <div style="overflow-x: auto;">
+
         <!-- <table class="w-full border border-gray-300 rounded-lg shadow-md">
             <thead>
                 <tr class="bg-secondary text-primary">
