--- a/src/app/WatchWare/PCB/CPCBNKSS/channels-status/channels-status.component.html
+++ b/src/app/WatchWare/PCB/CPCBNKSS/channels-status/channels-status.component.html
@@ -1,5 +1,11 @@
-<div *ngIf="station" class="">
+<div *ngIf="station" class="flex justify-between items-center">
     <h2 class="text-2xl font-normal text-gray-500">CPCB Channels Configuration of {{station.Name}}</h2>
+    <div class="flex">
+        <button (click)="showSyncStatus()" class="px-4 py-1  bg-accent text-white  flex justify-center items-center gap-2
+        rounded-md hover:bg-secondary transition duration-300"><i class="fa-solid fa-info-circle"></i>Channels Upload
+            Sync
+            Status</button>
+    </div>
 </div>
 <div class="my-5 border rounded-lg shadow-md p-4 bg-white">
     <p-table #dt [value]="ChannelConfigurations" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]"
@@ -93,3 +99,28 @@
         </div>
     </ng-template>
 </p-confirmdialog>
+
+
+
+<p-dialog header="Sync Status" [(visible)]="ShowSyncStatus" [modal]="true" [style]="{ width: '35rem' }"
+    [dismissableMask]="true" [closable]="true">
+    <div class="p-4">
+        <ng-container *ngIf="ChannelSyncStatuses.length > 0; else noChannels">
+            <div *ngFor="let status of ChannelSyncStatuses" class="border rounded-2xl shadow p-4 bg-white mb-4">
+                <div class="text-lg font-semibold text-gray-800">
+                    {{ status.ChannelName }}
+                </div>
+                <div class="text-sm text-gray-500">
+                    <span class="font-medium">Last Sync Time:</span>
+                    {{ status.LastRunTime || 'N/A' }}
+                </div>
+            </div>
+        </ng-container>
+
+        <ng-template #noChannels>
+            <div class="text-center text-gray-500 text-sm italic mt-8">
+                No records to display.
+            </div>
+        </ng-template>
+    </div>
+</p-dialog>
