--- a/src/app/WatchWare/System/DisplayBoard/display-board-edit-template/display-board-edit-template.component.html
+++ b/src/app/WatchWare/System/DisplayBoard/display-board-edit-template/display-board-edit-template.component.html
@@ -8,7 +8,7 @@
 
         <!-- File Settings Section -->
         <div class="col-span-3 border-r pr-4">
-            <h2 class="text-gray-700 text-lg mb-2">Create File Template</h2>
+            <h2 class="text-gray-700 text-lg mb-2">Edit File Template</h2>
 
             <div class="mt-4">
                 <label for="fileName" class="block text-gray-700 text-sm">File Name</label>
@@ -47,7 +47,7 @@
                         <i class="fas fa-spinner fa-spin mr-2"></i>
                     </span>
                     <span *ngIf="!Loading"></span>
-                    <span>Create Template</span>
+                    <span>Update Template</span>
                 </button>
 
             </div>
@@ -153,7 +153,7 @@
             <div class="mt-6 px-4">
                 <small *ngIf="displayForm.get('Template')?.invalid && displayForm.get('Template')?.touched"
                     class="text-red-500 text-sm">Template is required.</small>
-               
+                
                 <div *ngIf="displayForm.get('FileType')?.value === 'xlsx'; else showTextarea">
                     <label class="block text-sm font-medium text-gray-700 mb-1">Choose the Excel template file</label>
                     <input type="file" accept=".xlsx" (change)="onExcelFileSelected($event)"
@@ -169,7 +169,6 @@
 
             </div>
         </div> -->
-
 
         <div class="col-span-12">
             <div class="mt-6 px-4">
@@ -209,6 +208,7 @@
                 </ng-template>
             </div>
         </div>
+
 
     </div>
 </form>
