--- a/src/app/WatchWare/System/DisplayBoard/display-board-create-template/display-board-create-template.component.html
+++ b/src/app/WatchWare/System/DisplayBoard/display-board-create-template/display-board-create-template.component.html
@@ -29,7 +29,8 @@
 
             <div class="mt-4">
                 <label for="fileType" class="block text-gray-700 text-sm">File Type</label>
-                <select id="fileType" formControlName="FileType" class="border-gray-400 mt-1 p-2 border rounded w-full">
+                <select id="fileType" formControlName="FileType" class="border-gray-400 mt-1 p-2 border rounded w-full"
+                    (change)="onFileTypeChange($event)">
                     <option value="" disabled selected>Choose File type</option>
                     <option value="txt">Text</option>
                     <option value="csv">Csv</option>
