--- a/src/app/WatchWare/System/DisplayBoard/display-board-templates/display-board-templates.component.html
+++ b/src/app/WatchWare/System/DisplayBoard/display-board-templates/display-board-templates.component.html
@@ -42,7 +42,8 @@
                 <td>{{template.FileName}}</td>
                 <td>{{template.FilePath}}</td>
                 <td>{{template.FileType}}</td>
-                <td>{{template.TemplateContent}}</td>
+                <td class="text-gray-500 italic">[Click "Edit" to view]</td>
+
 
 
 
